<resources>
    <string name="app_name">Arena 2020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_schedule">Schedule</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_sos">SOS</string>
    <string name="menu_credits">App Credits</string>
    <string name="menu_about">About us</string>
    <string name="menu_reachus">Reach us</string>
    <string name="menu_map">Campus Map</string>

    <string name="live_score">Live scores</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="set">Set</string>

    <string name="menu_announcements">Announcements</string>

    <string name="scheduled">Scheduled</string>
    <string name="only_live">Live</string>
    <string name="live">Live: tap to view scores</string>
    <string name="completed">Completed: tap to view scores</string>
    <string name="only_completed">Completed</string>
    <string name="completed_no_live">Completed. Winner:</string>
    <string name="vs">vs</string>
    <string name="no_filter">No filter</string>

    <string name="chip_23">23RD</string>
    <string name="chip_24">24TH</string>
    <string name="chip_25">25TH</string>
    <string name="chip_26">26TH</string>

    <string name="firebase_collection_schedule">SportsSchedule</string>
    <string name="firebase_collection_schedule_field_date">dateAndTime</string>
    <string name="firebase_collection_schedule_field_sportCode">sportCode</string>
    <string name="firebase_collection_schedule_field_matchStatus">matchStatus</string>
    <string name="firebase_collection_schedule_field_name_team_a">teamA</string>
    <string name="firebase_collection_schedule_field_name_team_b">teamB</string>
    <string name="firebase_collection_schedule_field_score_team_a">teamAScore</string>
    <string name="firebase_collection_schedule_field_score_team_b">teamBScore</string>
    <string name="firebase_collection_schedule_field_batFirst">batFirst</string>
    <string name="firebase_collection_schedule_field_score_currentInnings">currentInnings</string>
    <string name="firebase_collection_schedule_field_overs_team_a">teamAOvers</string>
    <string name="firebase_collection_schedule_field_overs_team_b">teamBOvers</string>
    <string name="firebase_collection_schedule_field_wickets_team_a">teamAWickets</string>
    <string name="firebase_collection_schedule_field_wickets_team_b">teamBWickets</string>
    <string name="firebase_collection_schedule_field_currentSet">currentSet</string>
    <string name="firebase_collection_schedule_field_winner">winner</string>
    <string name="firebase_collection_schedule_field_setOneWinner">setOneWinner</string>
    <string name="firebase_collection_schedule_field_setTwoWinner">setTwoWinner</string>
    <string name="firebase_collection_schedule_field_setThreeWinner">setThreeWinner</string>
    <string name="firebase_collection_schedule_field_setOneScore">setOneScore</string>
    <string name="firebase_collection_schedule_field_setTwoScore">setTwoScore</string>
    <string name="firebase_collection_schedule_field_setThreeScore">setThreeScore</string>


    <string name="firebase_collection_announcements">Announcements</string>
    <string name="firebase_collection_announcements_field_date">date</string>
    <string name="firebase_collection_announcements_field_name">name</string>
    <string name="firebase_collection_announcements_field_desc">description</string>

    <string name="organizing_body">Organizing Body</string>
    <string name="tech_senate">Tech Senate</string>
    <string name="nikhil_peruri">Nikhil Peruri</string>
    <string name="president">President</string>
    <string name="todo">TODO</string>

    <string name="about">BITS Hyderabad is proud to present its 8th annual sports fests- ARENA! An amalgamation of a myriad of sport events and proshows, ARENA provides an apt platform for students across the nation to showcase their talents in the field of sports. Covering a wide range of indoor and outdoor sports, from carrom and chess to cricket and football, ARENA is all about sportsmanship and learning. Playing at ARENA guarantees an experience of a lifetime, as the best teams from across the country compete to ace the tournament. Laced with competition, fun and teamwork, ARENA is all set to welcome India\'s young sportsmen and women!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="android_developers">ANDROID DEVELOPERS</string>
    <string name="ui_ux">UI/UX</string>

    <string name="reach_us_text">From Secunderabad Railway Station to BITS Pilani, Hyderabad Campus, one has to travel 22 KM on Rajiv Rahadari/Karim Nagar Highway, up to Dongala Mysamma Junction after Aalankrita Resorts in Thumkunta Village and then take a right turn towards Ghatkesar. After travelling 1.5 KMs on this road, there is again a diversion to the right leading to the Campus. BITS sign boards indicating the directions are available on the way.
\n\nThere is a direct Bus No. 212 from Secunderabad Railway Station (Gurudwara Point) to BITS Pilani Hyderabad Campus Main Gate.
\n\nAPSRTC City Bus Timings : Bus No.212
\n\nFrom Secunderabad Railway Station (Gurudwara Point) to BITS Main Gate:
\n07:50, 8:20, 8:50, 09:50, 11:00, 12:00, 13:00, 14:10, 15:05, 16:05, 17:20, 18:15, 19:15, 20:15, 21:15.
\n\nFrom BITS Main Gate to Secunderabad Railway Station :
\n06:55, 07:55, 08:50, 09:20, 09:50, 11:00, 12:00, 13:00, 14:00, 15:05, 16:05, 18:15, 19:15, 20:15
\n\nBesides that, there are City Buses having numbers 211S, 211A, 211C, 211D, 211E, 211J, 211K, 211T, 211U, 567, 568, 569 which ply from Secunderabad Railway Station to various destinations on the Campus side. Further, there are many APSRTC buses from Secunderabad and Jubilee bus stand to Karim Nagar, Siddhipet, Ramagundam, Gajwel, Cheriyal etc. People can board any of these buses, get down either at Thumkunta or Dongala Mysamma junction which is 1KM away and take an auto to the campus.</string>
</resources>
