<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_schedule">

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.arena2020.ui.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_sports"
        android:name="com.example.arena2020.ui.SportsFragment"
        android:label="@string/menu_sports"
        tools:layout="@layout/fragment_sports" />

    <fragment
        android:id="@+id/nav_announcements"
        android:name="com.example.arena2020.ui.AnnouncementFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_announcements" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.arena2020.ui.AboutUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.arena2020.ui.AboutUsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about_us" />

</navigation>